# oeis-seek

./: .git-blame-ignore-revs  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/oeis_seek/: __init__.py  cli.py  core.py  download.py  index.py  matcher.py  models.py  rank.py
src/oeis_seek/data/: core_sequences.txt
src/oeis_seek/transforms/: __init__.py
src/seqseek/: __init__.py  cli.py  core.py  download.py  index.py  matcher.py  models.py  rank.py
src/seqseek/transforms/: __init__.py  builtin.py  normalize.py
tests/: conftest.py  test_cli.py  test_matcher.py  test_rank.py  test_transforms.py
tests/fixtures/: mini-names.txt  mini-stripped.txt
tools/: generate_core_set.py
