[project]
name = "seqseek"
version = "0.1.0"
description = "Transform-aware identifier for OEIS integer sequences"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "platformdirs>=4.0",
]

[project.scripts]
seqseek = "seqseek.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.10",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.uv]
# Dependency cooldown to mitigate supply-chain attacks (https://cooldowns.dev/).
# This uv version (0.9.7) requires a fixed date rather than a relative duration,
# so this is pinned to three days before the last dependency review and must be
# advanced when dependencies are intentionally updated.
exclude-newer = "2026-06-01T00:00:00Z"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seqseek"]
