[project]
name = "oeis-seek"
version = "0.1.0"
description = "Transform-aware identifier for OEIS integer sequences"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "niarenaw" }]
keywords = ["oeis", "integer-sequences", "cli", "mathematics", "sequence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "platformdirs>=4.0",
]

[project.urls]
Homepage = "https://github.com/niarenaw/seqseek"
Repository = "https://github.com/niarenaw/seqseek"
Issues = "https://github.com/niarenaw/seqseek/issues"

[project.scripts]
seqseek = "seqseek.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.10",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.uv]
# Dependency cooldown to mitigate supply-chain attacks (https://cooldowns.dev/).
# This uv version (0.9.7) requires a fixed date rather than a relative duration,
# so this is pinned to three days before the last dependency review and must be
# advanced when dependencies are intentionally updated.
exclude-newer = "2026-06-01T00:00:00Z"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seqseek"]
